# liblobby

./: .gitattributes  .gitmodules  CMakeLists.txt
cmake/: FindMYSQL.cmake
include/liblobby/: EMailUtils.h  LobbyClient.h  LobbyInterface.h  LobbyMessage.h  LobbyMessageInterface.h  LobbyMessages.h  LobbyPlayer.h  LobbyPlayerInfo.h  LobbyPlayerList.h  LobbyProtocol.h  LobbyServer.h  LobbyServerInfo.h  LobbyServerList.h  liblobby.h
src/: CMakeLists.txt  LobbyClient.cpp  LobbyClient.h  LobbyInterface.cpp  LobbyInterface.h  LobbyMessage.cpp  LobbyMessage.h  LobbyMessageInterface.cpp  LobbyMessageInterface.h  LobbyMessages.cpp  LobbyMessages.h  LobbyPlayer.cpp  LobbyPlayer.h  LobbyPlayerInfo.cpp  LobbyPlayerInfo.h  LobbyPlayerList.cpp  LobbyPlayerList.h  LobbyProtocol.h  LobbyServer.cpp  LobbyServer.h  LobbyServerInfo.cpp  LobbyServerInfo.h  LobbyServerList.cpp  LobbyServerList.h  MySQL.cpp  MySQL.h  libLobbyDefines.h  liblobby.h  lobbyServerApp.cpp  main.cpp  main.h
tests/: CMakeLists.txt  main.cpp  testEMailUtils.cpp
win32/vs2008/: liblobby_c.vcproj  liblobby_s.vcproj
win32/vs2010/: liblobby_c.vcxproj  liblobby_c.vcxproj.filters  liblobby_s.vcxproj  liblobby_s.vcxproj.filters
win32/vs2012/: liblobby_c.vcxproj  liblobby_c.vcxproj.filters  liblobby_s.vcxproj  liblobby_s.vcxproj.filters
